# spotify-dl

./: Cargo.toml  demo.cast  readme.md  spotify-dl.conf
librespot/core/src/: spclient.rs
librespot/playback/src/: player.rs
librespot/playback/src/decoder/: mod.rs
src/: config.rs  download.rs  download_old.rs  error.rs  main.rs  old.rs  record.rs  spotify.rs
