[package]
name = "spotify-dl"
version = "0.2.0"
edition = "2021"
default-run = "spotify-dl"

[[bin]]
name = "spotify-dl"
path = "src/main.rs"

[dependencies]

librespot = { version = "0.6.0-dev", features = ["passthrough-decoder"], path = "../librespot" }

tokio = "1.20.1"
regex = "1.6"
lazy_static = "1.4"
futures-executor = "^0.3.31"
dialoguer = "0.11.0"
console = "0.16.0"

rustyline = "15.0.0"
sanitise-file-name = "1.0.0"
